src/components/Nav/styles.module.scss
@use "/styles/variables.scss";
@use "/styles/global.scss";

.container {
  height: fit-content;

  @media (min-width: variables.$breakpoint-tablet) {
    position: fixed;
    border-right-width: 1px;
    border-color: var(--sidebar-type-color);
    display: flex;
    flex-direction: column;
  }
}

.mainlinks {
  height: calc(var(--nav-height) / 2);
  overflow: hidden;
  padding: var(--spacing-xs) 1.25rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  height: 43px;
  border-color: var(--sidebar-type-color);
  border-bottom-width: 1px;

  &:global(.noJumpTo) {
    max-height: unset;
  }

  .logo {
    display: flex;
    grid-column: 1 / 3;
    justify-content: space-between;
    height: 35px;
    width: 100%;
    a {
      height: 25px;
    }
  }

  &:global(.open) {
    height: unset;
  }

  ul {
    font-size: 1.5rem;
    line-height: 1.167;
    -webkit-text-stroke-width: 0.15px;
    margin-bottom: var(--spacing-xs);
  }

  @media (min-width: variables.$breakpoint-tablet) {
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: 1fr;
    grid-template-rows: 2fr 2fr 2fr;
    width: 100%;
    justify-content: space-between;
    flex-grow: 0;
    height: 80px;
    padding: 1.25rem;
    overflow: hidden;
    border-bottom-width: 0;
    max-height: calc(50vh - 1px);

    .logo {
      height: 50px;
      display: flex;
      align-items: center;
      gap: var(--spacing-xs);
      padding: 0;
      margin-bottom: 10px;
      a {
        height: unset;
      }
    }

    .toggle {
      display: grid;
    }

    ul {
      grid-column: 1 / 2;
      font-size: 1.25rem;
      line-height: 1.2;
      -webkit-text-stroke-width: 0.15px;
    }

    &:global(.open),
    &:global(.noJumpTo) {
      grid-template-rows: min-content 2fr;
      min-height: 350px;
      height: 100%;
    }
  }

  .mobileMenuLabel {
    display: flex;
    align-items: center;
    gap: 1rem;
    position: relative;
    top: -0.25rem;

    svg {
      height: 1rem;
      width: 1.25rem;
    }
    @media (min-width: variables.$breakpoint-tablet) {
      display: none !important;
    }
  }

  .desktopMenuLabel {
    display: none;
    @media (min-width: variables.$breakpoint-tablet) {
      display: block;
    }
  }

  &:global(.noJumpTo) {
    .mobileMenuLabel {
      display: flex;
    }
    .desktopMenuLabel {
      @media (min-width: variables.$breakpoint-tablet) {
        display: none;
      }
    }
  }
}

.jumpto {
  border-color: var(--sidebar-type-color);

  animation: height 0.3s ease-in-out;
  flex-grow: 0;
  border-bottom-width: 1px;
  height: 40px;

  /* Hide scrollbar */
  // Chrome, Safari, Edge, Opera
  &::-webkit-scrollbar {
    width: 0; /* Remove scrollbar space */
    background: transparent; /* Ensure the scrollbar is completely invisible */
  }
  // Firefox
  -ms-overflow-styles: none;
  scrollbar-width: none;

  ul {
    overflow-x: hidden;
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding: 0 1.25rem var(--spacing-sm);
    font-size: 1.5rem;
    line-height: 1.167;
    -webkit-text-stroke-width: 0.15px;
    max-height: 300px;

    /* Hide scrollbar */
    // Chrome, Safari, Edge, Opera
    &::-webkit-scrollbar {
      width: 0; /* Remove scrollbar space */
      background: transparent; /* Ensure the scrollbar is completely invisible */
    }
    // Firefox
    -ms-overflow-styles: none;
    scrollbar-width: none;
  }

  .toggle {
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding: var(--spacing-xs) 1.25rem;
  }

  @media (min-width: variables.$breakpoint-tablet) {
    height: fit-content;
    border-top-width: 1px;
    margin-top: auto;

    &:global(.open) {
      height: 100%;
      overflow-y: scroll;
    }

    .toggle {
      padding: 20px;
    }

    ul {
      padding-bottom: var(--spacing-md);
      display: inline-block;
      font-size: 1rem;
      line-height: 1.25;
      -webkit-text-stroke-width: 0.05px;
      max-height: none;
    }
  }
}

.buttonlink {
  display: flex;
  width: 100%;
  flex-wrap: nowrap;
  align-items: center;
  border-radius: 9999px;
  padding: 0.5rem;
  border: 1px solid var(--sidebar-type-color);
  &:hover {
    background-color: var(--sidebar-type-color);
    color: var(--bg-color);
    text-decoration: none;
  }
  font-size: 1.5rem;
  line-height: 1.167;
  -webkit-text-stroke-width: 0.15px;

  @media (min-width: variables.$breakpoint-tablet) {
    font-size: 1.25rem;
    line-height: 1.2;
    -webkit-text-stroke-width: 0.15px;
  }
}

.linklabel {
  text-decoration: none;

  a:global(.current) {
    text-decoration-line: underline;
  }

  &:not(:global(.small)) {
    // text-h3
    font-size: 1.5rem;
    line-height: 1.167;
    -webkit-text-stroke-width: 0.15px;
  }
  &:global(.small) {
    // text-body
    font-size: 1rem;
    line-height: 1.25;
    -webkit-text-stroke-width: 0.05px;
  }

  @media (min-width: variables.$breakpoint-tablet) {
    &:global(.small) {
      // text-body-caption
      font-size: 0.875rem;
      line-height: 1.42;
      -webkit-text-stroke-width: 0.1px;
    }
    &:not(&:global(.small)) {
      // text-body-large
      font-size: 1.25rem;
      line-height: 1.2;
      -webkit-text-stroke-width: 0.15px;
    }
  }
}

.linklabel:not(:global(.small)) + .linklabel:global(.small) {
  margin-top: 4px;
}

/* Interaction */

.jumpto:global(.open) {
  flex-grow: 1;
  height: unset;

  @media (min-width: variables.$breakpoint-tablet) {
    height: 100%;
    overflow-y: scroll;

    ul {
      display: inline-block;
    }
  }
}

/* Page-specific modifications */
:global(.reference-item) .jumpto ul {
  grid-template-columns: 1fr;
}

.jumpto ul li.linklabel:not(:global(.small), :first-child) {
  margin-top: 10px;
}

